# do-movie-radio-play

./: .clippy.toml  .codacy.yml  .codecov.yml  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  HARNESS.md  Makefile  QWEN.md  README.md  SECURITY.md  commitlint.config.cjs  deny.toml  dummy.json  fix_structs.py  rust-toolchain.toml  rustfmt.toml  test_output.txt  timeline.json  verified.json
.agents/: ORCHESTRATION.md  SKILLS.md
.agents/context/: workflow-state.json
.agents/tasks/: resolve-all-issues.md
.cargo/: config.toml
.claude/: rules.md
.codacy/: codacy.config.json
.cursor/: rules.md
.gemini/: rules.md
.github/ISSUE_TEMPLATE/: agent-change.yml  coding-change.yml  perf-change.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  optimization-sweep.yml  validation-sweep.yml
.mimocode/plans/: 1782118894096-playful-squid.md  1782144030907-sunny-planet.md
.opencode/rules/: rust-rules.md
.qoderwork/: skills
analysis/benchmarks/: after_optimization.txt  initial_baseline.txt
analysis/handoffs/: 01-research-handoff.md  02-implementation-handoff.md  03-testing-handoff.md  05-learning-db-integration.md  06-swarm-next-step-optimization.md  self-fix-loop-iter-1-20260713-145142.md  self-fix-loop-iter-1-20260713-145142.tasks.json
analysis/learnings/: 2026-04-16-real-movie-sweep.md  2026-04-18-holdout-readiness-gate.md  2026-04-18-lb95-gate.md  2026-04-18-repo-verification.md  2026-04-18-verifier-graph-refresh.md  latest-optimization-note.md  latest-radio-play-failure-breakdown.md  (+2 more)
benches/: analysis_bench.rs  pipeline_bench.rs
benchmarks/: Cargo.toml
benchmarks/benches/: analysis_bench.rs  pipeline_bench.rs  render_bench.rs
config/: default.json
crates/movie-radio-goap/: Cargo.toml
crates/movie-radio-goap/src/: actions.rs  assemble.rs  gaps.rs  lib.rs  narrate.rs  orchestrator.rs  planner.rs
crates/movie-radio-io/: Cargo.toml
crates/movie-radio-io/src/: edl.rs  event_log.rs  json.rs  lib.rs  preview.rs  vtt.rs  wav.rs
crates/movie-radio-learning/: Cargo.toml
crates/movie-radio-learning/src/: active_learning.rs  adaptive_thresholds.rs  calibrator.rs  database.rs  gap_store.rs  lib.rs  profiles.rs  threshold_store.rs
crates/movie-radio-learning/src/database/: migration.rs  mod.rs  queries.rs  tests.rs  types.rs
crates/movie-radio-pipeline/: Cargo.toml
crates/movie-radio-pipeline/src/pipeline/: benchmark.rs  decode.rs  features.rs  filters.rs  framing.rs  mod.rs  nonvoice_expand.rs  prompts.rs  resample.rs  segmenter.rs  speech_evidence.rs  tags.rs  tail_recovery.rs  tests.rs  tri_state.rs
crates/movie-radio-pipeline/src/pipeline/segmenter/: confidence.rs  merge.rs  mod.rs  nonvoice.rs  speech.rs  tests.rs
crates/movie-radio-pipeline/src/pipeline/vad/: energy.rs  engine.rs  hybrid.rs  mod.rs  spectral.rs
crates/movie-radio-render/: Cargo.toml
crates/movie-radio-render/src/: agc.rs  lib.rs  mixer.rs  noise.rs  spatial.rs
crates/movie-radio-timeline/: Cargo.toml
crates/movie-radio-timeline/src/: cli.rs  config.rs  main.rs  merge.rs  review.rs  review_template.rs  util.rs
crates/movie-radio-timeline/src/handlers/: extract.rs  mod.rs  preview.rs  radio_play.rs  validate.rs
crates/movie-radio-types/: Cargo.toml
crates/movie-radio-types/src/: config.rs  features.rs  fingerprint.rs  frame.rs  lib.rs  metrics.rs  segment.rs  voice_types.rs
crates/movie-radio-validation/: Cargo.toml
crates/movie-radio-validation/src/: compare.rs  dataset.rs  lib.rs  srt.rs  synthetic.rs
crates/movie-radio-verification/: Cargo.toml
crates/movie-radio-verification/src/: lib.rs
crates/movie-radio-verification/src/verification/: determine.rs  extractor.rs  fingerprint.rs  mod.rs  scoring.rs  tests.rs
crates/movie-radio-voice/: Cargo.toml
crates/movie-radio-voice/src/: config.rs  lib.rs
crates/movie-radio-voice/src/voice/: elevenlabs.rs  kokoro.rs  mod.rs  modal.rs  openai.rs  orpheus.rs  pockettts.rs  qwen3.rs
plans/: 110-close-agents-md-template-sync-gaps.md  110-fix-high-cve-rustls-webpki.md  110-goap-closeout-2026-05-23.md  ADR-INDEX.md  FOLLOWUPS.md  GOAP_STATE.md  init-prompt.md
reports/: nonvoice-review-elephants-dream.html  nonvoice-review-elephants-modern.html  nonvoice-review-singing-fool-reviewed.html  nonvoice-review-singing-fool.html  nonvoice-review-sintel-strict.html  nonvoice-review-sintel.html  review-ai-voice.html  review-elephants-1s.html  review-elephants-full.html  review-final.html  review-radio.html  review-verified-new.html  review-with-verification.html  test-review.html  test_elephants_review.html  verify_ui.html
schema/: agent-event.schema.json  timeline.schema.json
scripts/: aggregate-metrics.sh  ai-commit.sh  audit-msrv.sh  benchmark.sh  build_modern_ci_summary.py  build_radio_play_failure_breakdown.py  build_radio_play_readiness_report.py  check_benchmark_regression.py  check_media_intake.py  check_radio_play_lb95.py  check_radio_play_readiness.py  check_sweep_drift.py  check_validation_coverage.py  compare_sweeps.py  doctor.sh  fetch_test_assets.sh  generate-skills-md.sh  generate_optimized_profiles.py  handoff-to-tasks.sh  harness-check.sh  modal_tts_deploy.py  modal_tts_piper.py  optimize_and_publish_profiles.sh  optimize_fp_sweep.py  optimize_radio_play_holdout.py  pre-commit-hook.sh  quality_gate.sh  refresh_benchmark_baseline.sh  refresh_sweep_baseline.sh  run-evals.sh  run_standard_workflow.sh  run_validation_manifest.py  self-fix-loop.sh  setup-skills.sh  update-all-docs.sh  validate-agent-entrypoints.sh  validate-skills.sh  validate-workflows.sh
src/: cli.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  merge.rs  review.rs  review_template.rs  util.rs
templates/: review.html
tests/: benchmark_regression_cli.rs  benchmark_smoke.rs  calibration_integration.rs  decode_smoke.rs  features.rs  fingerprint_integration_test.rs  integration_cli.rs  json_contract.rs  prompt_rules.rs  segmentation_regression.rs  tag_rules.rs  validation_cli.rs  voice_integration_tests.rs
(+300 files in other folders)
