[package]
name = "movie-nonvoice-timeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timeline"
path = "src/main.rs"

[features]
default = []
high-quality-resample = ["dep:rubato"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hound = "3"
realfft = "3"
tempfile = "3"
libsql = { version = "0.9", default-features = false, features = ["core"] }
symphonia = { version = "0.6", features = ["mp3", "wav", "flac", "ogg", "pcm"] }
rayon = "1.10"
rubato = { version = "3.0", optional = true }
async-trait = "0.1"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rand = "0.10.1"
jsonschema = "0.46"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "analysis_bench"
harness = false
