[package]
name = "movie-radio-goap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GOAP planner and orchestrator"

[dependencies]
movie-radio-types.workspace = true
movie-radio-pipeline.workspace = true
movie-radio-voice.workspace = true
movie-radio-learning.workspace = true
movie-radio-validation.workspace = true
anyhow.workspace = true
async-trait.workspace = true
hound.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
