[package]
name = "movie-radio-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "I/O utilities for JSON, EDL, VTT, WAV"

[features]
playback = ["rodio/playback"]

[dependencies]
movie-radio-types.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hound.workspace = true
rodio.workspace = true

[lints]
workspace = true
