[package]
name = "movie-radio-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core audio processing pipeline"

[dependencies]
movie-radio-types.workspace = true
movie-radio-io.workspace = true
movie-radio-learning.workspace = true
movie-radio-verification.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hound.workspace = true
realfft.workspace = true
rayon.workspace = true
rubato.workspace = true
symphonia.workspace = true
tempfile.workspace = true

[features]
default = []
high-quality-resample = []

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
