[package]
name = "movie-radio-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio rendering and mixing for radio plays"

[dependencies]
anyhow.workspace = true
movie-radio-types.workspace = true
rodio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
