[package]
name = "movie-radio-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for movie radio play timeline extraction"

[[bin]]
name = "timeline"
path = "src/main.rs"

[dependencies]
movie-radio-types.workspace = true
movie-radio-pipeline.workspace = true
movie-radio-voice.workspace = true
movie-radio-goap.workspace = true
movie-radio-learning.workspace = true
movie-radio-verification.workspace = true
movie-radio-io.workspace = true
movie-radio-validation.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true

[lints]
workspace = true
