[package]
name = "movie-radio-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for movie radio play pipeline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
