[package]
name = "movie-radio-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Validation, comparison, and test fixtures"

[dependencies]
movie-radio-types.workspace = true
movie-radio-io.workspace = true
movie-radio-pipeline.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tempfile.workspace = true
hound.workspace = true

[lints]
workspace = true
