[package]
name = "movie-radio-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TTS voice synthesis providers"

[dependencies]
movie-radio-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ort.workspace = true
reqwest.workspace = true
symphonia.workspace = true
llama-cpp-2 = "0.1"
once_cell = "1"
rand = "0.10"
qwen_tts = { version = "0.1", default-features = false }
candle-core = "0.9"

[lints]
workspace = true
